--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "postcss": "^8.3.9"
+        "node-sass": "^6.0.1",
+        "postcss": "^8.3.9",
+        "sass-loader": "^12.2.0"
     }
 }
