fix: remove secret

--- a/app/.env.dist
+++ b/app/.env.dist
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=5d73ff1dbddee40d8aa2338320c755bc
+APP_SECRET= {{ SECRET }}
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
