--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,11 @@
         "@symfony/stimulus-bridge": "^2.0.0",
         "@symfony/webpack-encore": "^1.0.0",
         "core-js": "^3.0.0",
+        "postcss": "^8.3.11",
+        "postcss-scss": "^4.0.1",
         "regenerator-runtime": "^0.13.2",
         "stimulus": "^2.0.0",
+        "stylelint-scss": "^3.21.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -18,7 +21,6 @@
     "dependencies": {
         "bulma": "^0.9.3",
         "node-sass": "^6.0.1",
-        "postcss": "^8.3.9",
         "sass-loader": "^12.2.0"
     }
 }
