--- a/app/.stylelintrc.json
+++ b/app/.stylelintrc.json
@@ -13,6 +13,9 @@
         "declaration-colon-space-after": "always-single-line",
         "function-comma-space-after": "always",
         "no-missing-end-of-source-newline": true,
-        "declaration-block-semicolon-space-before": "never"
+        "declaration-block-semicolon-space-before": "never",
+        "at-rule-name-space-after": "always",
+        "at-rule-empty-line-before": "always",
+        "declaration-bang-space-before": "always"
     }
 }
