--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -3,7 +3,8 @@ security:
     enable_authenticator_manager: true
     # https://symfony.com/doc/current/security.html#c-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\User:
+            algorithm: 'auto'
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         app_user_provider:
@@ -29,3 +30,5 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        #   - { path: ^/tricks/new, roles: ROLE_USER }
+        #   - { path: ^/tricks/edit, roles: ROLE_USER }
