--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -22,6 +22,9 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+            
+            logout:
+                path: logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
