--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -9,3 +9,19 @@ tricks:
 display_trick:
    path: /tricks/{slug}
    controller: App\Controller\TrickController::getOneTrick
+
+login:
+   path: /login
+   controller: App\Controller\AuthController::login
+
+logout:
+   path: /logout
+   methods: GET
+
+register:
+   path: /register
+   controller: App\Controller\RegistrationController::register
+
+app_verify_email:
+   path: /verify/email
+   controller: App\Controller\RegistrationController::verifyUserEmail
