--- a/app/config/services.yaml
+++ b/app/config/services.yaml
@@ -14,6 +14,8 @@ parameters:
     database_root_password: '%env(resolve:MYSQL_ROOT_PASSWORD)%'
     database_host: '%env(resolve:DATABASE_HOST)%'
 
+    images_directory: '%kernel.project_dir%/public/uploads/images'
+
 services:
     # default configuration for services in *this* file
     _defaults:
