--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "bulma": "^0.9.3",
         "node-sass": "^6.0.1",
+        "remixicon": "^2.5.0",
         "sass-loader": "^12.2.0"
     }
 }
