update: password reset form

--- a/app/config/routes.yaml
+++ b/app/config/routes.yaml
@@ -34,6 +34,10 @@ register:
    path: /register
    controller: App\Controller\RegistrationController::register
 
+reset_password:
+   path: /reset-password
+   controller: App\Controller\RegistrationController::resetPassword
+
 app_verify_email:
    path: /verify/email
    controller: App\Controller\RegistrationController::verifyUserEmail
